add dpflow support

--- a/configs/imagenet/resnet/R-50-1x64d_step_1gpu_dpflow.yaml
+++ b/configs/imagenet/resnet/R-50-1x64d_step_1gpu_dpflow.yaml
@@ -10,7 +10,7 @@ RESNET:
 BN:
   ZERO_INIT_FINAL_GAMMA: True
 OPTIM:
-  BASE_LR: 0.1  # 0.0125 * 8
+  BASE_LR: 0.0125
   LR_POLICY: steps
   STEPS: [0, 30, 60, 90]
   LR_MULT: 0.1
@@ -19,19 +19,19 @@ OPTIM:
   NESTEROV: True
   WEIGHT_DECAY: 0.0001
 TRAIN:
-  DATASET: imagenet
+  DATASET: imagenet_dpflow
   SPLIT: train
-  BATCH_SIZE: 256
+  BATCH_SIZE: 32
   IM_SIZE: 224
-  EVAL_PERIOD: 10
+  EVAL_PERIOD: 1
 TEST:
-  DATASET: imagenet
+  DATASET: imagenet_dpflow
   SPLIT: val
-  BATCH_SIZE: 200
+  BATCH_SIZE: 25
   IM_SIZE: 256
-NUM_GPUS: 8
+NUM_GPUS: 1
 DATA_LOADER:
-  NUM_WORKERS: 4
+  NUM_WORKERS: 8 
 CUDNN:
   BENCHMARK: True
 OUT_DIR: .
