--- a/configs/imagenet/resnet/R-50-1x64d_step_8gpu_dpflow.yaml
+++ b/configs/imagenet/resnet/R-50-1x64d_step_8gpu_dpflow.yaml
@@ -30,10 +30,10 @@ TEST:
   BATCH_SIZE: 200 
   IM_SIZE: 256
 NUM_GPUS: 8
-USE_DPFLOW: True
-NUM_REPLICAS: 4
+USE_DPFLOW: False 
+NUM_REPLICAS: 1
 DATA_LOADER:
-  NUM_WORKERS: 4
+  NUM_WORKERS: 8
 CUDNN:
   BENCHMARK: True
 OUT_DIR: .
